# okinawa-social-resources-app

./: README.md  index.html  inline_html.py  package-lock.json  package.json  standalone.html  vite.config.js
assets/: index-BPvZilVx.css  index-q5V7H8ye.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/data/: categories.js  municipalities.js  socialResources.js
